Fix build with Java 8